fix: Livepage event section cards overflow

--- a/src/pages/live/EventSection.scss
+++ b/src/pages/live/EventSection.scss
@@ -58,20 +58,23 @@
 
 .event-list {
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+    justify-content: center;
+    align-items: start;
     gap: 10rem;
+    padding: 0 7rem;
 
     @media screen and (max-width: 1120px) {
         flex-direction: column;
         align-items: center;
         gap: 2.5rem;
+        padding: 0;
     }
 
 
     .live-event {
         flex: 1;
         flex-direction: column;
+        max-width: 600px;
 
         .badge-live {
             display: flex;
@@ -96,6 +99,7 @@
         flex: 1;
         display: flex;
         flex-direction: column;
+        max-width: 600px;
 
         .badge-upcoming {
             display: flex;
